--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1636,7 +1636,7 @@ financebench_id_04458:
     (if the answer is a single number, assume that it is that calculated EBITDA Margin metric value)
 
 
-financebench_id_03282:
+financebench_id_03282:  # TODO: retrieve Total Current Liabilities
   doc: NETFLIX_2017_10K
   question: What is Netflix's year end FY2017 total current liabilities (in USD millions)?
     Base your judgments on the information provided primarily in the balance sheet.
