update comment on examples/FinanceBench/ground-truths.yml > financebench_id_02416

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1921,7 +1921,7 @@ financebench_id_00702:
     the answer mentions Consumer Healthcare JV transaction
 
 
-financebench_id_02416:
+financebench_id_02416:  # TODO: retrieve correct 3 companies
   doc: PFIZER_2021_10K
   question: What are three main companies acquired by Pfizer mentioned in this 10K
     report?
