--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -998,7 +998,7 @@ financebench_id_01091:
   evaluator-unreliable: true
 
 
-financebench_id_00678:  # tricky because Gross Income label is implicit/missing (!) on Income Statement
+financebench_id_00678:  # tricky: Gross Income is implicit, with missing label
   doc: BOEING_2022_10K
   question: Does Boeing have an improving gross margin profile as of FY2022? If gross
     margin is not a useful metric for a company like this, then state that and explain
