update .Ruff.TOML linting configs

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -80,6 +80,7 @@ ignore = [
   "INP001",  # file is part of an implicit namespace package; add an `__init__.py`
   "LOG009",  # use of undocumented `logging.WARN` constant
   "N811",  # constant `SSM` imported as non-constant `LlamaIndexSSM`
+  "PD002",  # `inplace=True` should be avoided; it has inconsistent behavior
   "PERF401",  # use a list comprehension to create a transformed list
   "PGH003",  # use specific rule codes when ignoring type issues
   "PGH004",  # use specific rule codes when using `ruff: noqa`
