add examples/FinanceBench/expert-plan-map.yml > financebench_id_00711

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -32,6 +32,7 @@ financebench_id_04103: cash-conv-cyc
 financebench_id_03471: work-cap-ratio
 financebench_id_04854: fcf
 financebench_id_10136: retention-ratio
+financebench_id_00711: inv-turnover-ratio
 financebench_id_10499: inv-turnover-ratio
 financebench_id_04412: asset-turnover-ratio
 financebench_id_03031: net-work-cap
