--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -2822,6 +2822,10 @@ financebench_id_01484:
   justification: ''
   page(s)-0based: 1
 
+  category: 1-COMPARE
+  correctness: >-
+    the answer mentions US sales increased and international sales decreased
+
 
 financebench_id_01488:
   sector: Health Care
