update examples/FinanceBench/rag-test script & related Makefile targets

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -39,8 +39,8 @@ rag-gpt4-lm-answer:
 rag-test:
 	@poetry run python rag-test.py ${doc}
 
-rag-test-gpt4:
-	@poetry run python rag-test.py ${doc} --gpt4
+rag-test-gpt4o:
+	@poetry run python rag-test.py ${doc} --gpt4o
 
 
 ssm-discuss:
