--- a/.ruff.toml
+++ b/.ruff.toml
@@ -63,6 +63,7 @@ ignore = [
   "D411",  # missing blank line before section
   "D415",  # first line should end with a period, question mark, or exclamation point
   "DOC201",  # return is not documented in docstring
+  "DOC202",  # docstring should not have a returns section because the function doesn't return anything
   "DOC501",  # raised exception missing from docstring
   "DTZ011",  # the use of `datetime.date.today()` is not allowed, use `datetime.datetime.now(tz=).date()` instead
   "E261",  # insert at least two spaces before an inline comment
