update .env.template files in examples

--- a/examples/FinanceBench/.env.template
+++ b/examples/FinanceBench/.env.template
@@ -1,4 +1,2 @@
-AITO_HOST=[... Aitomatic host URL if running on Aitomatic services ...]
-AITO_KEY=[... Aitomatic key if running on Aitomatic services ...]
-
+HF_API_KEY=[... HuggingFace API key if running HuggingFace-hosted models ...]
 OPENAI_API_KEY=[... OpenAI API key if running on OpenAI services ...]
