--- a/examples/.env.template
+++ b/examples/.env.template
@@ -1,2 +1,2 @@
-LLAMA_API_KEY=[... Llama API key if running on Llama services ...]
+HF_API_KEY=[... HuggingFace API key if running HuggingFace-hosted models ...]
 OPENAI_API_KEY=[... OpenAI API key if running on OpenAI services ...]
