--- a/.github/workflows/install-lint-test-on-win.yml
+++ b/.github/workflows/install-lint-test-on-win.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         python-version:  # github.com/actions/python-versions/releases
           - 3.12
-          - 3.13.0-alpha.6
+          - 3.13.0-beta.4
 
     steps:
       - name: Checkout Repo
